update dice game ui

--- a/styles.css
+++ b/styles.css
@@ -7,35 +7,34 @@
 .dice {
   text-align: center;
   display: inline-block;
-
 }
 
 body {
-  background-color: #393E46;
+  background-color: #393e46;
 }
 
 h1 {
   margin: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
-  color: #4eb1cc;
+  color: #80deea;
 }
 
 p {
   font-size: 2rem;
-  color: #4eb1cc;
-  font-family: 'Indie Flower', cursive;
+  color: #62a8b1;
+  font-family: "Indie Flower", cursive;
 }
 
 img {
-  width: 80%;
+  width: 15rem;
+  margin: 0 1.5rem;
 }
 
 footer {
   margin-top: 5%;
-  color: #EEEEEE;
+  color: #eeeeee;
   text-align: center;
-  font-family: 'Indie Flower', cursive;
-
+  font-family: "Indie Flower", cursive;
 }
